2004-06-16  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/helper/Makefile_insert (helper_units_test_LDADD): Fix the previous
	  commit: -lglib-2.0 instead of -lglib.

2004-06-15  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/Makefile.am:
	* src/helper/Makefile_insert:
	* src/helper/units-test.cpp: New unit test.

	* src/select-toolbar.cpp: Greater conformance to CodingStyle.

2004-06-14  Carl Hetherington  <inkscape@carlh.net>

	* src/libnrtype/TextWrapper.cpp: Fix what looks like an off-by-one.

	* ChangeLog, src/prefs-utils.cpp:
	Fix bracketing typo that causes an array to be overrun.

2004-06-14  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-path.cpp: Move some declarations to first use.

2004-06-13  Kees Cook  <kees@outflux.net>

	* src/xml/repr.h, src/xml/repr-utils.cpp: adding additional RDF URIs
	to the default namespace prefix list.

2004-06-13  MenTaLguY  <mental@rydia.net>

	* src/arc-context.cpp, src/desktop.cpp, src/desktop.h, src/document.cpp,
	  src/document.h, src/draw-context.cpp, src/dyna-draw-context.cpp,
	  src/file.cpp, src/gradient-chemistry.cpp, src/interface.cpp,
	  src/rect-context.cpp, src/selection-chemistry.cpp, src/sp-object.cpp,
	  src/sp-object.h, src/spiral-context.cpp, src/splivarot.cpp,
	  src/star-context.cpp, src/svg-view.h, src/text-context.cpp,
	  src/extension/internal/gdkpixbuf-input.cpp:

	  added SPDesktop::currentRoot() and SPDesktop::currentLayer(), which
	  report the current "view" root and current "editing" layer,
	  respectively; I've also added SPObject::appendReprChild().

	  Between the two of them, they replace sp_document_add_repr, which
	  has been removed.  Generally to add a repr to a document, you would
	  now use either:

	   SP_DOCUMENT_DEFS(document)->appendReprChild(repr);

	  or:

	   desktop->currentLayer()->appendReprChild(repr);

2004-06-13  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
