@@ -1,5 +1,7 @@
 2004-06-16  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/helper/units-test.cpp (test_bases): Test sp_unit_get_identity.
+
 	* src/helper/Makefile_insert (helper_units_test_LDADD): Fix the previous
 	  commit: -lglib-2.0 instead of -lglib.
 
